--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
    <title>Resume</title>
  </head>
  <body>
-    <h2><pre>Name : PIDUGU RAMYA</pre></h2>
-    <h2><pre>Email : piduguramya14e@gmail.com</pre></h2>
+    <h2><pre>Name : M. BHOOMIKA</pre></h2>
+    <h2><pre>Email : myadaribhoomika@gmail.com</pre></h2>
     <h2><pre>Ph.(M) : +91 6281310120</pre></h2>
      <h1>Career Objective:</h1>
       <p>To secure a position where I can utilize my skills to overcome the challenges and drive towards success. While further developing my professional      abilities.</p>
